[tool.poetry]
name = "modeltools"
version = "0.2.2"
description = ""
authors = ["Beatriz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
Sphinx = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
